5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4357/executions/1884_1642.log
== TEST (2019-07-04 18:55:56) 
-- CODE:
from numpy import*
vetor=array(eval(input("digite o numero:")))
a=0
for i in vetor:
	if(vetor%5):
		a=a+1
zeros=(i,dtype=int)
a=0
for f in vetor:
	if(vetor[0]):
print(zeros)
-- ERROR:
File "XXXX", line 7
    zeros=(i,dtype=int)
                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 18:56:15) 
-- CODE:
from numpy import*
vetor=array(eval(input("digite o numero:")))
a=0
for i in vetor:
	if(vetor%5):
		a=a+1
zeros=(1,dtype=int)
a=0
for f in vetor:
	if(vetor[0]):
print(zeros)
-- ERROR:
File "XXXX", line 7
    zeros=(1,dtype=int)
                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 18:56:44) 
-- CODE:
from numpy import*
vetor=array(eval(input("digite o numero:")))
a=0
for i in vetor:
	if(vetor%5):
		a=a+1
zeros=(i,dtype=int)
a=0
for f in vetor:
	if(vetor[0]):
		a=a+1
print(zeros)
-- ERROR:
File "XXXX", line 7
    zeros=(i,dtype=int)
                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 18:57:27) 
-- CODE:
from numpy import*
vetor=array(eval(input("digite o numero:")))
a=0
for i in vetor:
	if(vetor%5):
		a=a+1
print(a)
zeros=(i,dtype=int)
d=0
for f in vetor:
	if(vetor[0]):
		d=d+1
print(zeros)
-- ERROR:
File "XXXX", line 8
    zeros=(i,dtype=int)
                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 18:57:40) 
-- CODE:
from numpy import*
vetor=array(eval(input("digite o numero:")))
a=0
for i in vetor:
	if(vetor%5):
		a=a+1
print(a)
zeros=(f,dtype=int)
d=0
for f in vetor:
	if(vetor[0]):
		d=d+1
print(zeros)
-- ERROR:
File "XXXX", line 8
    zeros=(f,dtype=int)
                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 19:10:40) 
-- CODE:
from numpy import*
vetor=array(eval(input("digite o numero:")))
a=0
for i in vetor:
	if(vetor%5):
		a=a+1
print(a)
indices=zeros(a,dtype=int)
d=0
t=0
for f in vetor:
	if(vetor%5==0):
		indices[t]=d
		t=t+1
	d=d+1
print(indices)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 19:11:19) 
-- CODE:
from numpy import*
vetor=array(eval(input("digite o numero:")))
a=0
for i in vetor:
	if(vetor%5==0):
		a=a+1
print(a)
indices=zeros(a,dtype=int)
d=0
t=0
for f in vetor:
	if(vetor%5==0):
		indices[t]=d
		t=t+1
	d=d+1
print(indices)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 19:13:18) 
-- CODE:
from numpy import*
vetor=array(eval(input("digite o numero:")))
a=0
d=0
for i in vetor:
	if(vetor[d]%5==0):
		a=a+1
	d=d+1
print(a)
indices=zeros(a,dtype=int)
d=0
t=0
for f in vetor:
	if(vetor%5==0):
		indices[t]=d
		t=t+1
	d=d+1
print(indices)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 19:13:43) 
-- CODE:
from numpy import*
vetor=array(eval(input("digite o numero:")))
a=0
d=0
for i in vetor:
	if(vetor[d]%5==0):
		a=a+1
	d=d+1
print(a)
indices=zeros(a,dtype=int)
d=0
t=0
for f in vetor:
	if(vetor[d]%5==0):
		indices[t]=d
		t=t+1
	d=d+1
print(indices)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-04 19:13:54) 
-- CODE:
from numpy import*
vetor=array(eval(input("digite o numero:")))
a=0
d=0
for i in vetor:
	if(vetor[d]%5==0):
		a=a+1
	d=d+1
print(a)
indices=zeros(a,dtype=int)
d=0
t=0
for f in vetor:
	if(vetor[d]%5==0):
		indices[t]=d
		t=t+1
	d=d+1
print(indices)
-- EXECUTION TIME:
0.952205
-- TEST CASE 1:
---- input:
[10,20,31,1,13,15,20,33,36,63,25,10,2]
---- correct output:
6
[ 0  1  5  6 10 11]
---- user output:
6
[ 0  1  5  6 10 11]
-- TEST CASE 2:
---- input:
[10,20,31,15,36,63,25,10,2]
---- correct output:
5
[0 1 3 6 7]

---- user output:
5
[0 1 3 6 7]
-- TEST CASE 3:
---- input:
[10,20,31,15,36,63,26,10,2]
---- correct output:
4
[0 1 3 7]
---- user output:
4
[0 1 3 7]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
